memory-game/src/components/Navbar/style.css
.navbar {
    background: #5133a4;
    min-height: 70px;
    /* position: fixed; */
    width: 100%;
    -webkit-box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
    color: #fff;
    font-size: calc(10px + 14 * (100vw - 320px)/ 800);
    z-index: 99;
    white-space: nowrap;
} 

nav, section {
    display: block;
} 
/* 
.container {
    width: 100%;
    white-space: nowrap;

} */

